# Context-Aware-Video-Timestamping-for-Surveillance-using-PE

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
cctv-frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
cctv-frontend/src/: App.jsx  ChatBox.jsx  LogPanel.jsx  main.jsx
