[project]
name = "video-surveillance-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "ftfy>=6.3.1",
    "google-genai>=1.56.0",
    "moviepy>=2.2.1",
    "opencv-python>=4.12.0.88",
    "qdrant-client>=1.16.1",
    "regex>=2025.11.3",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "twilio>=9.9.0",
]
